rename page.css 7

--- a/signup_login.html
+++ b/signup_login.html
@@ -1320,7 +1320,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="_klarpw"></div>
+                                      <div class="place__recommended-no"></div>
                                     </div>
                                     <div>
                                       <div class="_k8r05be">
@@ -1351,7 +1351,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="_klarpw">
+                                      <div class="place__recommended-no">
                                         <div
                                           class="_1yhfti2"
                                           id="email-login-email-InputField-help"
@@ -2546,7 +2546,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div class="_1yhfti2" id="error-text">
                                             <span style="margin-right: 4px"
                                               ><svg
@@ -2600,7 +2600,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw">
+                                          <div class="place__recommended-no">
                                             <div
                                               class="_pxnjg"
                                               id="email-signup-email-InputField-help"
@@ -2641,7 +2641,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw">
+                                          <div class="place__recommended-no">
                                             <div
                                               class="_1yhfti2"
                                               id="email-signup-email-InputField-help"
@@ -2710,7 +2710,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_klarpw"></div>
+                                          <div class="place__recommended-no"></div>
                                         </div>
                                         <div>
                                           <div class="_k8r05be">
@@ -2757,7 +2757,7 @@
                                         </div>
                                         <div
                                           data-testid="password-rules-indicator"
-                                          class="_klarpw"
+                                          class="place__recommended-no"
                                           aria-live="polite"
                                           aria-atomic="true"
                                         >
@@ -4365,7 +4365,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="_klarpw"></div>
+                                    <div class="place__recommended-no"></div>
                                   </div>
                                   <div>
                                     <div class="_k8r05be">
@@ -4396,7 +4396,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <div
                                         class="_1yhfti2"
                                         id="email-login-email-InputField-help"
@@ -5579,7 +5579,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_klarpw">
+                                      <div class="place__recommended-no">
                                         <div class="_1yhfti2" id="error-text">
                                           <span style="margin-right: 4px"
                                             ><svg
@@ -5631,7 +5631,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div
                                             class="_pxnjg"
                                             id="email-signup-email-InputField-help"
@@ -5670,7 +5670,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div
                                             class="_1yhfti2"
                                             id="email-signup-email-InputField-help"
@@ -5739,7 +5739,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_klarpw"></div>
+                                        <div class="place__recommended-no"></div>
                                       </div>
                                       <div>
                                         <div class="_k8r05be">
@@ -5786,7 +5786,7 @@
                                       </div>
                                       <div
                                         data-testid="password-rules-indicator"
-                                        class="_klarpw"
+                                        class="place__recommended-no"
                                         aria-live="polite"
                                         aria-atomic="true"
                                       >
