rename page.css 9

--- a/merchandising.html
+++ b/merchandising.html
@@ -4855,7 +4855,7 @@
                                                               class="header__search-tabs-filter-hr dir dir-ltr"
                                                             ></div>
                                                             <div
-                                                              class="header__search-tabs-filter-content crbzydf dir dir-ltr"
+                                                              class="header__search-tabs-filter-content header__search-tabs-filter-flex dir dir-ltr"
                                                             >
                                                               <div
                                                                 class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive bkmyqgh dir dir-ltr"
