--- a/products.html
+++ b/products.html
@@ -8091,7 +8091,7 @@
                                                                             src="https://a0.muscache.com/pictures/f9ec8a23-ed44-420b-83e5-10ff1f071a13.jpg"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8105,7 +8105,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/pictures/f9ec8a23-ed44-420b-83e5-10ff1f071a13.jpg" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8137,7 +8137,7 @@
                                                                             src="https://a0.muscache.com/im/pictures/7b5cf816-6c16-49f8-99e5-cbc4adfd97e2.jpg?im_w=320"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8150,7 +8150,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/im/pictures/7b5cf816-6c16-49f8-99e5-cbc4adfd97e2.jpg?im_w=320" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8181,7 +8181,7 @@
                                                                             src="https://a0.muscache.com/im/pictures/a0fd6dfc-6bec-4abb-850e-9ab78ed7bf37.jpg?im_w=320"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8194,7 +8194,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/im/pictures/a0fd6dfc-6bec-4abb-850e-9ab78ed7bf37.jpg?im_w=320" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8225,7 +8225,7 @@
                                                                             src="https://a0.muscache.com/im/pictures/4e762891-75a3-4fe1-b73a-cd7e673ba915.jpg?im_w=320"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8239,7 +8239,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/im/pictures/4e762891-75a3-4fe1-b73a-cd7e673ba915.jpg?im_w=320" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8271,7 +8271,7 @@
                                                                             src="https://a0.muscache.com/im/pictures/f0ece7c0-d9b2-49d5-bb83-64173d29cbe3.jpg?im_w=320"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8284,7 +8284,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/im/pictures/f0ece7c0-d9b2-49d5-bb83-64173d29cbe3.jpg?im_w=320" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8315,7 +8315,7 @@
                                                                             src="https://a0.muscache.com/im/pictures/ea5598d7-2b07-4ed7-84da-d1eabd9f2714.jpg?im_w=320"
                                                                           />
                                                                           <div
-                                                                            class="ioa2q3t dir dir-ltr"
+                                                                            class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                           ></div>
                                                                           <span
                                                                             class="text-highlight dir dir-ltr"
@@ -8328,7 +8328,7 @@
                                                                               alt=""
                                                                               src="https://a0.muscache.com/im/pictures/ea5598d7-2b07-4ed7-84da-d1eabd9f2714.jpg?im_w=320" />
                                                                             <div
-                                                                              class="ioa2q3t dir dir-ltr"
+                                                                              class="header__search-tabs-filter-body-where-region-overlay dir dir-ltr"
                                                                             ></div
                                                                           ></span>
                                                                         </button>
@@ -8423,7 +8423,7 @@
                                                   class="header__search-tabs-filter-hr dir dir-ltr"
                                                 ></div>
                                                 <div
-                                                  class="header__search-tabs-filter-content crbzydf dir dir-ltr"
+                                                  class="header__search-tabs-filter-content header__search-tabs-filter-flex dir dir-ltr"
                                                 >
                                                   <div
                                                     class="header__search-tabs-filter-btn-container header__search-tabs-filter-btn-container-inactive bkmyqgh dir dir-ltr"
